--- a/picture.html
+++ b/picture.html
@@ -1,43 +1,76 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-   <meta charset="UTF-8">
-   <title>Picture</title>
- </head>
- <style>
-   body{
-    margin:0;
-    padding:0;
-    background-color: white;
-   }
-   .container{
-    border:1px solid gray;
-    height:200px;
-    width:400px;
-    margin:0 auto;
-    background-color: #ccc;
-    margin-top: 250px;
-    /*position:fixed;*/
+<!DOCTYPE html>
+<html lang="en">
 
-       }
-    #top-left{
-      height:50px;
-      width:50px;
-      -webkit-border-radius:50px 0 0 0;
-      background-color: yellow;
-      
-    }
-    #bottom-right{
-      /* height:50px;
-      width:50px;
-      -webkit-border-radius:50px 0 0 0;
-      background-color: yellow;*/
-    }
- </style>
- <body>
- <div class="container">
-   <div id="top-left"></div>
-  <div id="bottom-right"></div>
- </div>
- </body>
- </html>
+<head>
+    <meta charset="UTF-8">
+    <title>Picture</title>
+</head>
+<style>
+body {
+    margin: 0;
+    padding: 0;
+    background-color: white;
+}
+
+.container {
+    border: 1px solid gray;
+    height: 200px;
+    width: 400px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    position: absolute;
+    background-color: #ccc;
+}
+
+.top-left {
+    height: 50px;
+    width: 50px;
+    border-radius: 0 0 50px 0;
+    /*position: absolute;*/
+    background-color: yellow;
+}
+
+.bottom-right {
+    height: 50px;
+    width: 50px;
+    border-radius: 50px 0 0 0;
+    position: relative;
+    top: 100px;
+    right: 0;
+    background-color: yellow;
+}
+
+.bottom-left {
+    height: 50px;
+    width: 50px;
+    border-radius: 0 50px 0 0;
+    /*position: absolute;*/
+    bottom: 0;
+    left: 0;
+    background-color: yellow;
+}
+
+.top-right {
+    height: 50px;
+    width: 50px;
+    border-radius: 0 0 0 50px;
+    /*position: absolute;*/
+    top: 0;
+    right: 0;
+    background-color: yellow;
+}
+</style>
+
+<body>
+    <div class="container">
+        <div class="top-left"></div>
+        <div class="bottom-right"></div>
+        <div class="bottom-left"></div>
+        <div class="top-right"></div>
+    </div>
+</body>
+
+</html>
