--- a/dd.html
+++ b/dd.html
@@ -4,20 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1 id="demo">111</h1>
-    <button type="button" onclick="ts()">我是可爱滴按钮哦。。</button>
     <script>
-    /*
-    下面的这些代码会输出
-    一个标题和一个段落
-    并将代表主页的开始
-    */
+    if (true) {
+        let x = 5;
+    }
+    console.log(x); // 5
     </script>
-    <script src="app.js"></script>
 </body>
 
 </html>
