删除部分无用文件

--- a/dd.html
+++ b/dd.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-    <script>
-    if (true) {
-        let x = 5;
-    }
-    console.log(x); // 5
-    </script>
+    <button>Change user</button>
+    <h1></h1>
+    <script src="app.js"></script>
 </body>
 
 </html>
