--- a/dd.html
+++ b/dd.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Document</title>
 </head>
-
 <body>
-    <button>Change user</button>
-    <h1></h1>
-    <script src="app.js"></script>
+<form name="selectForm">
+    <p>
+        <label for="musicTypes">Choose some music types, then click the button below:</label>
+        <select id="musicTypes" name="musicTypes" multiple="multiple">
+            <option selected>R&B</option>
+            <option>爵士</option>
+            <option>布鲁斯</option>
+            <option>新纪元</option>
+            <option>古典</option>
+            <option>戏剧</option>
+        </select>
+    </p>
+    <p>
+        <input id="btn" type="button" value="选择了多少个选项?" />
+    </p>
+</form>
+<script>
+const today = new Date().getHours;
+console.log(today)
+</script>
 </body>
-
 </html>
