--- a/dd.html
+++ b/dd.html
@@ -1,29 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Document</title>
+    <meta charset="utf-8">
+    <title>IFE JavaScript Task 01</title>
 </head>
+
 <body>
-<form name="selectForm">
-    <p>
-        <label for="musicTypes">Choose some music types, then click the button below:</label>
-        <select id="musicTypes" name="musicTypes" multiple="multiple">
-            <option selected>R&B</option>
-            <option>爵士</option>
-            <option>布鲁斯</option>
-            <option>新纪元</option>
-            <option>古典</option>
-            <option>戏剧</option>
-        </select>
-    </p>
-    <p>
-        <input id="btn" type="button" value="选择了多少个选项?" />
-    </p>
-</form>
-<script>
-const today = new Date().getHours;
-console.log(today)
-</script>
+    <!-- <label>请输入北京今天空气质量：
+        <input id="aqi-input" type="text" value="ddd">
+    </label>
+    <button id="button">确认填写</button>
+    <div>您输入的值是：<span id="aqi-display">尚无录入</span></div> -->
+    <script type="text/javascript">
+    // (function() {
+    //     const input = document.getElementById('aqi-input').value;
+    //     const button = document.getElementById('button');
+    //     const aqi_display = document.getElementById('aqi-display');
+    //     button.onclick = function () {
+    //         if (input === null){
+    //             alert('请输入数据')
+    //         }else{
+    //             aqi_display.innerHTML = input
+    //         }
+    //     }
+    // })();
+    /*(function() {
+        const $ =function (id){
+            return document.getElementById(id);
+        }
+        let input = $('aqi-input').value;
+        let button = $('button');
+        let aqi = $('aqi-display');
+        button.onclick = function() {
+            if (input === null) {
+                alert('请输入有效值')
+            } else {
+                aqi.innerHTML = input
+            }
+        }
+    })()
+    </script>
+  <div id="long"></div>
+  <div class="long"></div>
+  <blockquote></blockquote>
+  <q></q>
+  <div></div>
+  <p></p>
+  <blockquote></blockquote>
+  <span></span>
+  <p></p>
+  <blockquote></blockquote>
+<!-- <em><span class></span></em> -->
+<em><span class="id"></span></em>
+<table>
+    <tr class="row">
+        <td class="col"></td>
+    </tr>
+</table>
+<a href="http://"></a>
+<abbr title="telphonenumber"></abbr>
+<button type="reset"></button>
+<optgroup></optgroup>   
 </body>
 </html>
