--- a/dd.html
+++ b/dd.html
@@ -1,66 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>IFE JavaScript Task 01</title>
-
+    <meta charset="UTF-8">
+    <title>Document</title>
 </head>
+
 <body>
-    <label>请输入北京今天空气质量：
-        <input id="aqi-input" type="text">
-    </label>
-    <button id="button">确认填写</button>
-    <div>您输入的值是：<span id="aqi-display">尚无录入</span></div>
-    <script type="text/javascript">
-    // (function() {
-    //      const input = document.getElementById('aqi-input').value;
-    //      const button = document.getElementById('button');
-    //      const aqi_display = document.getElementById('aqi-display');
-    //      button.onclick = function () {
-    //          if (input === null){
-    //              alert('请输入数据')
-    //          }else{
-    //              aqi_display.innerHTML = input
-    //          }
-    //      }
-    //  })();
-    (function() {
-        button.onclick = function() {
-            const $ =function (id){
-                return document.getElementById(id);
-            }
-            let input = $('aqi-input').value;
-            let button = $('button');
-            let aqi = $('aqi-display');
-            if (input === null) {
-                alert('请输入有效值')
-            } else {
-                aqi.innerHTML = input
-            }
-        }
-    })()
+    <script>
+    var name = "The Window";　　
+    var object = {　　　　
+        name: "My Object",
+        getNameFunc: function() {　　　　　　
+            var that = this;　　　　　　
+            return function() {　　　　　　　　
+                return that.name;　　　　　　
+            };　　　　
+        }　　
+    };　　
+    alert(object.getNameFunc()());
     </script>
- <!--  <div id="long"></div>
-  <div class="long"></div>
-  <blockquote></blockquote>
-  <q></q>
-  <div></div>
-  <p></p>
-  <blockquote></blockquote>
-  <span></span>
-  <p></p>
-  <blockquote></blockquote> -->
-<!-- <em><span class></span></em> -->
-<!-- <em><span class="id"></span></em>
-<table>
-    <tr class="row">
-        <td class="col"></td>
-    </tr>
-</table>
-<a href="http://"></a>
-<abbr title="telphonenumber"></abbr>
-<button type="reset"></button>
-<optgroup></optgroup -->
 </body>
+
 </html>
