--- a/dd.html
+++ b/dd.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Task12.html</title>
+    style{
+    
+    }
 </head>
-
 <body>
-    <script>
-    var name = "The Window";　　
-    var object = {　　　　
-        name: "My Object",
-        getNameFunc: function() {　　　　　　
-            var that = this;　　　　　　
-            return function() {　　　　　　　　
-                return that.name;　　　　　　
-            };　　　　
-        }　　
-    };　　
-    alert(object.getNameFunc()());
-    </script>
-</body>
-
+    <h1>This is a heading</h1>
+    <p>The first paragraph.</p>
+    <p>The second paragraph.</p>
+    <p>The first paragraph.</p>
+    <p>The second paragraph.</p>
+    <p>The first paragraph.</p>
+    <p>The second paragraph.</p>
+    <p>The first paragraph.</p>
+    <p>The second paragraph.</p>
+    <p>The first paragraph.</p>
+    <p>The second paragraph.</p>
+    </body>
 </html>
