--- a/task12.html
+++ b/task12.html
@@ -44,10 +44,11 @@
   }
   
   .banner {
-    position: relative;
     width: 250px;
     height: 150px;
+    position: relative;
     background-color: red;
+    overflow: hidden;
   }
   
   .banner ul {
@@ -55,26 +56,19 @@
     margin: 0;
   }
   
-  .banner li {
-    display: block;
-  }
-  
   .sliders {
-    position: absolute;
-    left: 0;
-    right: 0;
     width: 100%;
     height: 100%;
-    animation: .5s slider-init linear;
+    position: absolute;
+    left: 0%;
   }
   
   .sliders li {
-    position: absolute;
-    left: -100%;
-    top: 0;
     width: 100%;
     height: 100%;
-    animation: .5s slider-out linear;
+    position: absolute;
+    top: 0%;
+    left: -100%;
   }
   
   #slider-1 {
@@ -82,62 +76,49 @@
   }
   
   #slider-2 {
-    background-color: green;
+    background-color: gray;
   }
   
-  #slider-3 {
-    background-color: blue;
+  #slider-1 {
+    background-color: green;
   }
   
   .sliders li:target {
     left: 0%;
-    animation: .5s slider-in linear;
+    animation: 0.5s change;
   }
   
-  @keyframes slider-init {
+  @keyframes change {
     0% {
-      left: -100%
-    }
-    100% {
       left: 0%;
     }
-  }
-  
-  @keyframes slider-out {
-    0% {
-      left: 0%
-    }
-    100%{
+    100% {
       left: -100%;
     }
   }
   
-  @keyframes slider-in {
-    0% {
-      left: 100%
-    }
-    100% {
-      left: 0%;
-    }
-  }
   .btns {
-    z-index: 100;
     position: absolute;
-    bottom: 0;
+    width: 150px;
+    height: 40px;
     right: 0;
-    display: flex;
+    bottom: 0;
   }
   
   .btns a {
+    margin-right: 10px;
+    width: 40px;
+    height: 40px;
     display: block;
-    margin: 0 1px;
-    background-color: rgba(255, 255, 255, 0.5);
-    color: white;
+    float: left;
     text-decoration: none;
-    padding: 10px 14px;
+    text-align: center;
+    line-height: 40px;
+    background-color: rgba(255, 255, 255, 0.5);
   }
   </style>
 </head>
+
 <body>
   <table>
     <thead>
@@ -214,4 +195,5 @@
     </div>
   </div>
 </body>
+
 </html>
